# safeptr

./: CMakeLists.txt  SafePtr.cpp  SafePtr.h  main.cpp  safebuffer.cpp  safebuffer.h  safeptr.hpp
inc/: defer.h  logger.h
